--- a/xd/index.html
+++ b/xd/index.html
@@ -9,7 +9,12 @@
 </head>
 
 <body>
-    <div class="cube"></div>
+    <div id="container">
+
+    </div>
+
+
+
     <script src="Tablero.js"></script>
     <script src="Tetrimino.js"></script>
     <script src="drawtab.js"></script>
