--- a/xd/index.html
+++ b/xd/index.html
@@ -3,16 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Tetris Javascript</title>
+    <title>TimeTris</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
     <link rel="stylesheet" href="russ.css">
 </head>
 
 <body>
-    <div id="container">
-
-    </div>
-
+    <div id="container"></div>
 
 
     <script src="Tablero.js"></script>
