--- a/TimeTris/index.html
+++ b/TimeTris/index.html
@@ -11,7 +11,7 @@
     <header>
         <div id="container-H">
             <div class="logo"></div>
-            <h1 class="tittle">TimeTris</h1>
+            <div class="logo1"></div>
             <div class="box-H">
                 <div class="buttons">
                     <button>Log In</button>
