--- a/TimeTris/index.html
+++ b/TimeTris/index.html
@@ -56,7 +56,9 @@
                         <h4>Level: <span id="level">1</span></h4>
                     </div>
                 </div>
-                <div id="game"></div>
+                <div id="game">
+                    <iframe id="gameFrame" src="../xd/index.html"></iframe>
+                </div>
             </div>
         </section>
         <aside>
