--- a/TimeTris/index.html
+++ b/TimeTris/index.html
@@ -57,7 +57,7 @@
                     </div>
                 </div>
                 <div id="game">
-                    <iframe id="gameFrame" src="../xd/index.html"></iframe>
+                    <iframe id="gameFrame" src="../game/game.html"></iframe>
                 </div>
             </div>
         </section>
