--- a/game/game.html
+++ b/game/game.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>TimeTris</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" href="russ.css">
 </head>
 
