--- a/game/game.html
+++ b/game/game.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-    <script src="Tablero.js"></script>
-    <script src="Tetrimino.js"></script>
-    <script src="drawtab.js"></script>
+    <script src="js/Tablero.js"></script>
+    <script src="js/Tetrimino.js"></script>
+    <script src="js/drawtab.js"></script>
 </body>
 <footer>
 </footer>
