--- a/game/game.html
+++ b/game/game.html
@@ -10,9 +10,10 @@
 </head>
 
 <body>
+    <script src="js/drawtab.js"></script>
     <script src="js/Tablero.js"></script>
     <script src="js/Tetrimino.js"></script>
-    <script src="js/drawtab.js"></script>
+    <script src="js/mejoras.js"></script>
 </body>
 <footer>
 </footer>
